Fixed mobile layout of login box being too small

--- a/src/app/authentication/login/login.component.css
+++ b/src/app/authentication/login/login.component.css
@@ -3,9 +3,15 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 64px);
 }
 
 mat-card {
   width: 25%;
+}
+
+@media only screen and (max-width: 768px) {
+  mat-card {
+    width: 75%;
+  }
 }
